<resources>
    <string name="app_name">移居手册</string>
    <string name="title_activity_login">登录</string>
    <string name="get_it">知道了</string>
    <string name="self_position_1">授权入室察视（稍后开通）</string>
    <string name="skip_question">您确定要跳过后面的所有问题吗？</string>
    <string name="red_desc">您当前暂无任何优惠券</string>
    <string name="distance_">范围不超过</string>
    <string name="app_decrible1">从房屋管理维护到信件财务处理</string>
    <string name="app_decrible2">无处不在的零空缺，清澄为您呈现最周全、省心的美好体验</string>
    <string name="main_home">首页</string>
    <string name="main_not_login">暂没登录！</string>
    <string name="main_quit_again">再按一次退出程序</string>
    <string name="main_home_qczy">清澄自营</string>
    <string name="main_home_label">周期管理服务</string>
    <string name="main_home_label_2">清澄护航，将琐碎最小化，让享受最大化</string>
    <string name="main_home_label_3">四季意趣，我们为您的美宅内外造景</string>
    <string name="main_home_hot">热门</string>
    <string name="delete_all_service">您确定要删除所有的服务吗?</string>
    <string name="main_home_home_service">家居服务</string>
    <string name="main_home_house_repair">房屋维修</string>
    <string name="main_home_life_service">生活服务</string>
    <string name="main_need">订单</string>
    <string name="main_need_response">待响应</string>
    <string name="main_need_doing">进行中</string>
    <string name="main_need_history">历史</string>
    <string name="main_need_month">月</string>
    <string name="maintain">可维持</string>
    <string name="config_maintain">当前月可以支付超过6个月的服务费用</string>
    <string name="note_agree_prool">请同意用户协议</string>
    <string name="rent_submit">确认并提交</string>
    <string name="agree_with_prool">点击注册，即表示您同意《移居手册使用协议》和《移居手册服务提供者协议》</string>
    <string name="main_need_order_num">订单号:</string>
    <string name="main_need_serice">服务商</string>
    <string name="main_need_business_detail">业务详情</string>
    <string name="main_need_choose_service">由此选择</string>
    <string name="main_need_choose_services">查看接单情况</string>
    <string name="main_need_watch_order">查看评价</string>
    <string name="main_need_cancel_order">取消订单</string>
    <string name="main_need_cancel_order_jie">去选专家</string>
    <string name="main_need_agree_order">同意报价</string>
    <string name="main_need_agree_order1">接受报价同意开工</string>
    <string name="main_need_disagree_order">驳回</string>
    <string name="main_need_disagree_order1">不接受报价</string>
    <string name="main_need_service">服务中</string>
    <string name="main_need_pay_order">去支付</string>
    <string name="main_need_evaluate_order">去评价</string>
    <string name="main_need_has_canceld">已取消</string>
    <string name="pro_pop_word7_1">如果服务完成，则专家只得向用户收取服务总价。</string>
    <string name="pro_pop_word7_2">上门费——只有专家已上门并且服务终止(不能完成)时，用户才应向专家支付上门费用</string>
    <string name="pro_pop_word7_3">检测费——只有当专家已上门进行检测工作，服务终止(不能完成)时，用户才应向专家支付有偿检测费用。(用户与专家应自行协商是否收取该费用)</string>
    <string name="pro_pop_word8_1">\"服务总价\"为服务完成后，用户应向专家支付全部费用总额</string>
    <string name="pro_pop_word8_2">报价方式分为\"定额报价\"(固定总价)和\"时薪报价\"(总价=时薪*小时价)两种模式</string>
    <string name="pro_pop_word8_3">时薪报价模式的小时数由专家上门后输入，需经过用户同意才能生效</string>
    <string name="main_need_is_cancel">确定要取消订单吗?</string>
    <string name="main_cancel_order_time">1</string>
    <string name="main_need_is_agree">确定要同意报价吗?</string>
    <string name="main_need_is_disagree">您确认不接受报价？</string>
    <string name="main_need_gqd">个抢单</string>
    <string name="main_find">需求</string>
    <string name="main_message">消息</string>
    <string name="main_mine_page">我的主页</string>
    <string name="main_mine_change_to_pro">切换到服务商版</string>
    <string name="main_mine_change_to_user">切换到用户版</string>
    <string name="main_mine_pro_set_location">设置服务区域中心</string>
    <string name="main_mine_service">客服</string>
    <string name="o2o_detail_has_done">完成\t</string>
    <string name="o2o_detail_dan_pingjias">单/评价\t</string>
    <string name="o2o_detail_dan_pingjia">单/评价\t</string>
    <string name="o2o_detail_xie_pingmi">/平米</string>
    <string name="o2o_detail_fwbj8_choose_date">具体日期</string>
    <string name="o2o_detail_fwbj8_choose_time">具体时间</string>
    <string name="o2o_detail_fwbj8_for_long">可供工作时长</string>
    <string name="o2o_detail_fwbj8_answer_5">请填写您希望服务安排在什么时间</string>
    <string name="o2o_detail_glwx12_tv_email">邮箱地址</string>
    <string name="o2o_detail_glwx12_tv_phone">电话号码</string>
    <string name="o2o_detail_glwx12_tv_check">专家可以直接给我打电话报价</string>
    <string name="last_update_time">上次更新时间:</string>
    <string name="yes_is">需要添加</string>
    <string name="point_here">点此按钮</string>
    <string name="look_for_your_sercice">为您找到合适的专家</string>
    <string name="begin_look_for_your_sercice">开始寻找合适的专家</string>
    <string name="message_alert">信息提示</string>
    <string name="message_alert_yes">确定</string>
    <string name="message_alert_no">取消</string>
    <string name="done">确定</string>
    <string name="yes">完成</string>
    <string name="yes1">完成</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="commit">提交</string>
    <string name="commit_success">提交成功</string>
    <string name="delete_success">删除成功</string>
    <string name="add_house_title2">添加房产</string>
    <string name="change">修改</string>
    <string name="add_house_title">添加房产</string>
    <string name="add_house_edit_title">编辑房产</string>
    <string name="add_house_toast">添加房产成功</string>
    <string name="add_house_edit_toast">修改房产成功</string>
    <string name="add_house_title_1">为了使我们的国家团队可以更详细的掌握您爱家的情况，请您告诉我们您的</string>
    <string name="add_house_title_2">房屋状况</string>
    <string name="add_house_label_1">所在城市</string>
    <string name="add_house_label_2">详细地址</string>
    <string name="add_house_label_3">房屋类型</string>
    <string name="add_house_label_4">土地面积</string>
    <string name="add_house_label_5">建筑面积</string>
    <string name="add_house_label_6">绿地面积</string>
    <string name="add_house_label_7">水池面积</string>
    <string name="add_house_label_8">备用联系人电话:</string>
    <string name="up_id_card">上传手持证件照</string>
    <string name="up_front_card">上传身份证正面照片</string>
    <string name="up_back_card">上传身份证反面照片</string>
    <string name="is_can_see">接单后可见</string>
    <string name="add_house_hint_1">选择您的所在城市</string>
    <string name="add_house_hint_2">填写您的房屋地址</string>
    <string name="add_house_hint_3">选择您的房屋类型</string>
    <string name="add_house_hint_4">选择您的土地面积</string>
    <string name="add_house_hint_5">选择您的建筑面积</string>
    <string name="add_house_hint_6">选择您的绿地面积</string>
    <string name="add_house_hint_7">选择您的水池面积</string>
    <string name="add_house_hint_8">填写您的备用联系人电话</string>
    <string name="advice_feedback_title">意见反馈</string>
    <string name="advice_feedback_toast_1">请补全反馈内容</string>
    <string name="tell_us">有什么要对我们说的...</string>
    <string name="all_business_title">全部业务</string>
    <string name="user_time">时间:</string>
    <string name="more_comment_title">TA的评价</string>
    <string name="contact_title">联系人</string>
    <string name="contact_label_1">我关注的人</string>
    <string name="contact_label_2">关注我的人</string>
    <string name="contact_label_3">互相关注</string>
    <string name="refres_suucess">刷新成功</string>
    <string name="cancel_select">取消</string>
    <string name="confirm_select">确定</string>
    <string name="no_service">本月无服务</string>
    <string name="select_proof">选择要分享到的平台</string>
    <string name="cancel_share">取消分享</string>
    <string name="share_title">分享</string>
    <string name="evaluate_title">评价:</string>
    <string name="evaluate_label">非常满意，无可挑剔</string>
    <string name="evaluate_label_2">请选择标签</string>
    <string name="evaluate_hint">请输入评价内容</string>
    <string name="select_or">或</string>
    <string name="o2o_order_next_step">下一步</string>
    <string name="o2o_order_or">或</string>
    <string name="o2o_order_last_step">上一步</string>
    <string name="o2o_order_make_sure_title">信息确认</string>
    <string name="o2o_expert">专家</string>
    <string name="o2o_order_make_sure_">信息确认</string>
    <string name="issue_require_complete">请至少选择一项或输入内容</string>
    <string name="issue_require_at_least_one">请至少选择一项或输入内容</string>
    <string name="issue_require_upload_pic">上传照片</string>
    <string name="issue_addr_add_addr">+ 添加地址</string>
    <string name="issue_addr_choose_house">选择您的房产</string>
    <string name="modify_username">昵\t\t称</string>
    <string name="modify_name">姓名</string>
    <string name="show_user_name">用户名</string>
    <string name="modify_phone">手机号</string>
    <string name="modify_my_introduce">我的简介</string>
    <string name="conque_account">该Paypal账号已被占用</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_deduct">扣除 : </string>
    <string name="my_recharge">充值 : </string>
    <string name="my_wallet_total_money">总资产($) </string>
    <string name="bind_paypal_text">绑定或修改Paypal账号需要经平台验证后才能生效\n第一步、提交Paypal账号至平台\n第二步、拨打下方电话联系工作人员验证账号\n95045580098</string>
    <string name="need_order_detail">订单详情</string>
    <string name="need_order_expand">展开</string>
    <string name="need_order_view_all">展开</string>
    <string name="need_order_hide">收起</string>
    <string name="person_info">个人信息</string>
    <string name="person_info_name">姓\t\t名</string>
    <string name="person_info_hint_username">编辑用户名</string>
    <string name="person_info_hint_name">编辑姓名</string>
    <string name="person_info_hint_phone">编辑手机号</string>
    <string name="person_info_hint_introduce">输入我的简介</string>
    <string name="person_pic">个人相册</string>
    <string name="person_pic_no_pic">暂无图片</string>
    <string name="pro_detail_sfrz">身份认证</string>
    <string name="pro_detail_jnrz">技能认证</string>
    <string name="pro_detail_pic">相册</string>
    <string name="pro_detail_intro">个人简介</string>
    <string name="pro_detail_his_skill">TA的技能</string>
    <string name="pro_detail_my_skill">我的技能</string>
    <string name="pro_detail_his_evaluate">TA的评价</string>
    <string name="pro_detail_my_evaluate">我的评价</string>
    <string name="pro_detail_no_evaluate">暂无评价</string>
    <string name="pro_detail_invite_him">选择专家</string>
    <string name="dialog">欢迎加入移居手册服务商。请您务必在【我的】-【我的收入】-【我的收款信息】里填写您的收款银行卡信息，以确保您的收入顺利到账。
用户每笔订单的服务费将直接支付给公司平台，公司每周一为您结算上周收入。</string>
    <string name="take_money_num">提现金额</string>
    <string name="take_money_commit_apply">提交申请</string>
    <string name="eva_tdel">态度恶劣</string>
    <string name="eva_jybhg">技艺不合格</string>
    <string name="eva_gzwwc">工作未完成</string>
    <string name="eva_jzbd">举止不当</string>
    <string name="eva_jgjfhqz">价格纠纷或欺诈</string>
    <string name="eva_yzbz">衣着不整</string>
    <string name="eva_gzwczlc">工作完成质量差</string>
    <string name="eva_bryzcxxbf">本人与注册信息不符</string>
    <string name="eva_yzbsshwgsy">严重不守时或无故爽约</string>
    <string name="eva_tdld">态度冷淡</string>
    <string name="eva_jyss">技艺生疏</string>
    <string name="eva_sfbhl">收费不合理</string>
    <string name="eva_bss">不守时</string>
    <string name="eva_input_other">其它內容</string>
    <string name="input__account">请输入提现到的账户</string>
    <string name="withdraw_money">可提现金额为:</string>
    <string name="input_withdraw_money">输入提现金额</string>
    <string name="pro_work1">工作单位</string>
    <string name="pro_work2">输入您的工作单位</string>
    <string name="pro_work3">职 位</string>
    <string name="pro_work4">输入您的职位</string>
    <string name="pro_work5">开始时间</string>
    <string name="pro_work6">选择时间</string>
    <string name="pro_work7">结束时间</string>
    <string name="pro_work9">选择时间</string>
    <string name="pro_work10">移除</string>
    <string name="pop1">我们已将您的需求通知附近专家，专家们给出报价需要一定时间，请您耐心等候</string>
    <string name="pop2">查看报价时请注意报价方式为定额报价还是时薪报价(上门确定工时)，请注意专家是否有偿上门服务(服务顺利完成则免除上门费用)</string>
    <string name="pop3">您可以通过查看专家的平台认证等级(加V加S)、信用分(红心、钻石)、个人介绍＆身份认证、技能介绍＆技能认证、服务评价等信息对专家有更全面的认识</string>
    <string name="pop4">综合以上信息选择合适的专家为您服务</string>
    <string name="pop5">您可以发送语音、文字、图片等方式与专家交流(由您发起与专家的交流，专家无法主动给您发送信息)</string>
    <string name="dialog_note">温馨提示</string>
    <string name="dialog_add">添加</string>
    <string name="dialog_cancel">取消</string>
</resources>