<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#55000000"
                android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/evalue_no_color_white_shape"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_m"
            android:layout_marginTop="@dimen/space_l"
            android:drawableLeft="@mipmap/pop_big_dot"
            android:drawablePadding="@dimen/space_m"
            android:text="@string/pop1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_m"
            android:layout_marginTop="@dimen/space_m"
            android:drawableLeft="@mipmap/pop_big_dot"
            android:drawablePadding="@dimen/space_m"
            android:text="@string/pop2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_m"
            android:layout_marginTop="@dimen/space_m"
            android:drawableLeft="@mipmap/pop_big_dot"
            android:drawablePadding="@dimen/space_m"
            android:text="@string/pop3"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="@dimen/space_m"
            android:layout_marginTop="@dimen/space_m"
            android:drawableLeft="@mipmap/pop_big_dot"
            android:drawablePadding="@dimen/space_m"
            android:text="@string/pop5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_m"
            android:layout_marginTop="@dimen/space_m"
            android:drawableLeft="@mipmap/pop_big_dot"
            android:drawablePadding="@dimen/space_m"
            android:layout_marginBottom="@dimen/space_l"
            android:text="@string/pop4"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_diss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-25dp"
        android:src="@mipmap/pop_big_icon"/>
</RelativeLayout>
