<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/withdraw_money"/>
        <TextView
            android:id="@+id/tv_withdraw_momey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/red"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/divider_big_width"
        android:layout_marginRight="@dimen/divider_big_width"
        android:layout_marginBottom="@dimen/divider_big_width"

        android:background="@drawable/bg_shape_tv_rect_white_little_corner"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_money_num"
            android:textColor="@color/text_1"
            android:textSize="16sp"
            android:padding="18dp"
            />
        <EditText
            android:id="@+id/et_input_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_withdraw_money"
            android:textSize="15sp"
            android:textColorHint="@color/light_gray"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/et_input_account"
        android:layout_width="match_parent"
        android:layout_height="55dip"
        android:layout_marginLeft="@dimen/divider_big_width"
        android:layout_marginRight="@dimen/divider_big_width"
        android:layout_marginBottom="@dimen/divider_big_width"
        android:minHeight="@dimen/space_smlx"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/space_l"
        android:background="@drawable/bg_shape_tv_rect_white_little_corner"
        android:hint="@string/input__account"
        android:textSize="15sp"
        android:textColorHint="@color/light_gray"
        />
    <TextView
        android:id="@+id/take_money_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/divider_big_width"
        android:text="@string/take_money_commit_apply"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/bg_shape_tv_rect_theme_little_corner"
        />
</LinearLayout>